--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<title>Manage Landing Page</title>
 </head>
+
 <body>
 	<div>
 		<nav class="relative container mx-auto p-4">
@@ -23,18 +25,24 @@
 					<a href="#" class="hover:text-darkGrayishBlue">Community</a>
 				</div>
 
-				<a href="#" class="hidden p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight md:block">Get Started</a>
+				<a href="#"
+					class="hidden p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight md:block">Get
+					Started</a>
 			</div>
 		</nav>
 
-        <!-- HERO SECTION -->
+		<!-- HERO SECTION -->
 		<section id="hero">
-			<div class="container flex flex-col-reverse items-center px-6 mx-auto mt-10 space-y-0 md:space-y-0 md:flex-row">
+			<div
+				class="container flex flex-col-reverse items-center px-6 mx-auto mt-10 space-y-0 md:space-y-0 md:flex-row md:px-2">
 				<div class="flex flex-col mb-32 space-y-12 md:w-1/2">
-					<h1 class="max-w-md text-4xl font-bold text-center md:text-5xl md:text-left">Bring everyone together to build better products</h1>
-					<p class="max-w-sm text-center text-darkGrayishBlue md:text-left">Manage makes it simple for software teams to plan day-to-day tasks while keeping the larger team goals in view.</p>
+					<h1 class="max-w-md text-4xl text-darkBlue font-bold text-center md:text-5xl md:text-left">Bring everyone
+						together to build better products</h1>
+					<p class="max-w-sm text-center text-darkGrayishBlue md:text-left">Manage makes it simple for software teams to
+						plan day-to-day tasks while keeping the larger team goals in view.</p>
 					<div class="flex justify-center md:justify-start">
-						<a href="#" class="p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight">Get Started</a>
+						<a href="#" class="p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight">Get
+							Started</a>
 					</div>
 				</div>
 				<div class="md:w-1/2">
@@ -45,7 +53,63 @@
 
 		<!-- FEATURES SECTION -->
 		<section id="features">
+			<div class="container mx-auto mt-10 flex flex-col md:flex-row space-y-8 md:px-2 md:space-x-8 md:space-y-0">
+				<div class="md:w-1/2">
+					<h2 class="max-w-md mb-4 text-center text-3xl text-darkBlue font-bold md:text-4xl md:text-left">What's
+						different about Manage?</h2>
+					<p class="max-w-sm text-center text-darkGrayishBlue md:text-left">Manage provides all the functionality your
+						team needs, without the complexity. Our software is tailor-made for modern digital product teams. </p>
+				</div>
+				<div class="flex flex-col space-y-6 md:w-1/2">
+					<div class="flex flex-col space-y-4 md:flex-row md:space-x-6 md:space-y-0">
+						<div class="rounded-l-full bg-brightRedSupLight mb-4 md:bg-transparent">
+							<div class="flex items-center space-x-2">
+								<span class="text-white text-md bg-brightRed px-5 py-2 rounded-full md:py-1">01</span>
+								<h4 class="text-xl font-bold text-darkBlue md:hidden">Track company-wide progress</h4>
+							</div>
+						</div>
+
+						<div>
+							<h4 class="hidden text-xl mb-4 font-bold text-darkBlue md:block">Track company-wide progress</h4>
+							<p class="text-darkGrayishBlue">See how your day-to-day tasks fit into the wider vision. Go from tracking
+								progress at the milestone level all the way done to the smallest of details. Never lose sight of the
+								bigger picture again.</p>
+						</div>
+					</div>
+					<div class="flex flex-col space-y-4 md:flex-row md:space-x-6 md:space-y-0">
+						<div class="rounded-l-full bg-brightRedSupLight mb-4 md:bg-transparent">
+							<div class="flex items-center space-x-2">
+								<span class="text-white text-md bg-brightRed px-5 py-2 rounded-full md:py-1">02</span>
+								<h4 class="text-xl font-bold text-darkBlue md:hidden">Advanced built-in reports</h4>
+							</div>
+						</div>
+
+						<div>
+							<h4 class="hidden text-xl mb-4 font-bold text-darkBlue md:block">Advanced built-in reports</h4>
+							<p class="text-darkGrayishBlue">Set internal delivery estimates and track progress toward company goals.
+								Our customisable dashboard helps you build out the reports you need to keep key stakeholders informed.
+							</p>
+						</div>
+					</div>
+					<div class="flex flex-col space-y-4 md:flex-row md:space-x-6 md:space-y-0">
+						<div class="rounded-l-full bg-brightRedSupLight mb-4 md:bg-transparent">
+							<div class="flex items-center space-x-2">
+								<span class="text-white text-md bg-brightRed px-5 py-2 rounded-full md:py-1">03</span>
+								<h4 class="text-xl font-bold text-darkBlue md:hidden">Everything you need in one place</h4>
+							</div>
+						</div>
+
+						<div>
+							<h4 class="hidden text-xl mb-4 font-bold text-darkBlue md:block">Everything you need in one place</h4>
+							<p class="text-darkGrayishBlue">Stop jumping from one service to another to communicate, store files,
+								track tasks and share documents. Manage offers an all-in-one team
+								productivity solution.</p>
+						</div>
+					</div>
+				</div>
+			</div>
 		</section>
 	</div>
 </body>
+
 </html>
