--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					<p class="max-w-sm text-center text-darkGrayishBlue md:text-left">Manage provides all the functionality your
 						team needs, without the complexity. Our software is tailor-made for modern digital product teams. </p>
 				</div>
-				<div class="flex flex-col space-y-6 md:w-1/2">
+				<div class="flex flex-col space-y-6 md:w-1/2 px-2">
 					<div class="flex flex-col space-y-4 md:flex-row md:space-x-6 md:space-y-0">
 						<div class="rounded-l-full bg-brightRedSupLight mb-4 md:bg-transparent">
 							<div class="flex items-center space-x-2">
@@ -107,6 +107,58 @@
 						</div>
 					</div>
 				</div>
+			</div>
+		</section>
+
+		<!-- TESTIMONIALS SECTION -->
+		<section id="testimonials">
+			<div class="container max-w-6xl px-5 mx-auto mt-32 text center">
+				<h2 class="text-3xl font-bold text-center text-darkBlue">What they've said</h2>
+				<div class="flex flex-col space-y-10 my-8 mt-20 md:flex-row md:space-x-6 md:space-y-0">
+					<div class="flex flex-col space-y-6 p-6 items-center bg-veryLightGray rounded-lg md:w-1/3">
+						<img src="images/avatar-anisha.png" class="w-16 -mt-14" alt="profile">
+						<h4 class="text-md text-darkBlue font-bold">Anisha Li</h4>
+						<p class="text-sm text-darkGrayishBlue text-center">“Manage has supercharged our team’s workflow. The
+							ability to
+							maintain
+							visibility on larger milestones at all times keeps everyone motivated.”</p>
+					</div>
+					<div class="hidden md:flex flex-col space-y-6 p-6 items-center bg-veryLightGray rounded-lg md:w-1/3">
+						<img src="images/avatar-ali.png" class="w-16 -mt-14" alt="profile">
+						<h4 class="text-md text-darkBlue font-bold">Ali Bravo</h4>
+						<p class="text-sm text-darkGrayishBlue text-center">“We have been able to cancel so many other subscriptions
+							since
+							using
+							Manage. There is no more cross-channel confusion and everyone is much
+							more focused.”</p>
+					</div>
+					<div class="hidden md:flex flex-col space-y-6 p-6 items-center bg-veryLightGray rounded-lg md:w-1/3">
+						<img src="images/avatar-richard.png" class="w-16 -mt-14" alt="profile">
+						<h4 class="text-md text-darkBlue font-bold">Richard Watts</h4>
+						<p class="text-sm text-darkGrayishBlue text-center">“Manage allows us to provide structure and process. It
+							keeps us
+							organized
+							and focused. I can’t stop recommending them to everyone I talk to!”</p>
+					</div>
+				</div>
+				<div class="flex items-center justify-center my-16">
+					<a href="#" class="p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight">Get
+						Started</a>
+				</div>
+			</div>
+		</section>
+
+		<!-- CTA SECTION -->
+		<section id="cta" class="bg-brightRed">
+			<div
+				class="container mx-auto flex flex-col items-center justify-between py-24 space-y-12 md:space-y-0 md:flex-row">
+				<h2 class="text-white font-bold text-4xl leading-tight text-center md:text-left md:text-5xl md:max-w-xl">
+					Simplify how your
+					team works
+					today</h2>
+				<a href="#"
+					class="p-3 px-6 pt-2 text-brightRed font-bold bg-white rounded-full shadow-2xl baseline hover:opacity-90">Get
+					Started</a>
 			</div>
 		</section>
 	</div>
