--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<title>Manage Landing Page</title>
 </head>
 
-<body>
+<body class="ease-in duration-300">
 	<div>
 		<nav class="relative container mx-auto p-4">
 			<div class="flex items-center justify-between">
@@ -161,6 +161,44 @@
 					Started</a>
 			</div>
 		</section>
+
+		<!-- FOOTER -->
+		<footer class="bg-veryDarkBlue py-8">
+			<div class="container mx-auto px-4 md:px-0">
+				<div class="flex flex-col-reverse justify-between md:flex-row md:space-x-12">
+					<div class="flex flex-col-reverse justify-between space-y-8 items-center md:flex-col md:w-1/5">
+						<img src="images/logo_white.svg" alt="logo" class="w-48 mt-12 md:mb-8 md:mt-0 md:w-64">
+						<div class="flex space-x-8">
+							<img src="images/icon-facebook.svg" alt="facebook icon" class="w-8">
+							<img src="images/icon-youtube.svg" alt="youtube icon" class="w-8">
+							<img src="images/icon-twitter.svg" alt="twitter icon" class="w-8">
+							<img src="images/icon-pinterest.svg" alt="pinterest icon" class="w-8">
+							<img src="images/icon-instagram.svg" alt="instagram icon" class="w-8">
+						</div>
+					</div>
+					<div class="flex justify-around mb-8 md:w-2/5 md:mb-0">
+						<ul class="list-none">
+							<li class="mb-4"> <a href="#" class="text-md text-zinc-300 hover:text-brightRed">Home</a> </li>
+							<li class="mb-4"> <a href="#" class="text-md text-zinc-300 hover:text-brightRed">Pricing</a> </li>
+							<li class="mb-4"> <a href="#" class="text-md text-zinc-300 hover:text-brightRed">Products</a> </li>
+							<li class="mb-4"> <a href="#" class="text-md text-zinc-300 hover:text-brightRed">About Us</a> </li>
+						</ul>
+						<ul class="list-none">
+							<li class="mb-4"> <a href="#" class="text-md text-zinc-300 hover:text-brightRed">Careers</a> </li>
+							<li class="mb-4"> <a href="#" class="text-md text-zinc-300 hover:text-brightRed">Community</a> </li>
+							<li class="mb-4"> <a href="#" class="text-md text-zinc-300 hover:text-brightRed">Privacy Policy</a> </li>
+						</ul>
+					</div>
+					<div class="flex items-center pb-6 md:w-2/5 md:justify-end md:items-start md:pb-0">
+						<div class="flex space-x-4 w-full md:w-auto">
+							<input type="text" class="rounded-full bg-white text-brightRed border-0 py-3 px-6 w-full md:w-2/3"
+								placeholder="Updates in your inbox">
+							<button class="border-0 outline-0 rounded-full py-2 px-6 bg-brightRed text-white">Go</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</footer>
 	</div>
 </body>
 
