--- a/index.html
+++ b/index.html
@@ -28,6 +28,24 @@
 				<a href="#"
 					class="hidden p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight md:block">Get
 					Started</a>
+
+				<button id="menu-btn" class="block hamburger md:hidden">
+					<span class="hamburger-top"></span>
+					<span class="hamburger-middle"></span>
+					<span class="hamburger-bottom"></span>
+				</button>
+			</div>
+
+			<!-- MOBILE MENU -->
+			<div class="md:hidden">
+				<div id="menu"
+					class="absolute flex flex-col items-center hidden py-8 mt-10 space-y-6 font-bold bg-white text-darkBlue sm:w-auto sm:self-center left-6 right-6 drop-shadow-md">
+					<a href="#">Pricing</a>
+					<a href="#">Product</a>
+					<a href="#">About Us</a>
+					<a href="#">Careers</a>
+					<a href="#">Community</a>
+				</div>
 			</div>
 		</nav>
 
@@ -163,12 +181,13 @@
 		</section>
 
 		<!-- FOOTER -->
-		<footer class="bg-veryDarkBlue py-8">
-			<div class="container mx-auto px-4 md:px-0">
+		<footer class="bg-veryDarkBlue py-12">
+			<div class="container mx-auto px-4 md:px-2">
 				<div class="flex flex-col-reverse justify-between md:flex-row md:space-x-12">
-					<div class="flex flex-col-reverse justify-between space-y-8 items-center md:flex-col md:w-1/5">
-						<img src="images/logo_white.svg" alt="logo" class="w-48 mt-12 md:mb-8 md:mt-0 md:w-64">
-						<div class="flex space-x-8">
+					<div class="flex flex-col-reverse justify-between space-y-5 items-center md:flex-col md:w-1/5">
+						<p class="text-center text-darkGrayishBlue my-6 md:hidden md:my-0">Copyright 2020. All Rights Reserved</p>
+						<img src="images/logo_white.svg" alt="logo" class="w-48 my-6 md:w-64 md:my-0">
+						<div class="flex space-x-6 md:space-x-4">
 							<img src="images/icon-facebook.svg" alt="facebook icon" class="w-8">
 							<img src="images/icon-youtube.svg" alt="youtube icon" class="w-8">
 							<img src="images/icon-twitter.svg" alt="twitter icon" class="w-8">
@@ -189,17 +208,21 @@
 							<li class="mb-4"> <a href="#" class="text-md text-zinc-300 hover:text-brightRed">Privacy Policy</a> </li>
 						</ul>
 					</div>
-					<div class="flex items-center pb-6 md:w-2/5 md:justify-end md:items-start md:pb-0">
+					<div class="flex flex-col items-center pb-6 md:w-2/5 md:justify-start md:items-end md:pb-0">
 						<div class="flex space-x-4 w-full md:w-auto">
-							<input type="text" class="rounded-full bg-white text-brightRed border-0 py-3 px-6 w-full md:w-2/3"
+							<input type="text" class="rounded-full bg-white text-brightRed border-0 py-2 px-6 w-full md:w-3/4"
 								placeholder="Updates in your inbox">
-							<button class="border-0 outline-0 rounded-full py-2 px-6 bg-brightRed text-white">Go</button>
+							<button
+								class="border-0 outline-0 rounded-full py-2 px-6 bg-brightRed text-white hover:bg-brightRedLight">Go</button>
 						</div>
+						<p class="hidden text-center text-darkGrayishBlue md:mt-16 md:block">Copyright 2020. All Rights Reserved</p>
 					</div>
 				</div>
 			</div>
 		</footer>
 	</div>
+
+	<script src="js/script.js"></script>
 </body>
 
 </html>
