--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 		<!-- CTA SECTION -->
 		<section id="cta" class="bg-brightRed">
 			<div
-				class="container mx-auto flex flex-col items-center justify-between py-24 space-y-12 md:space-y-0 md:flex-row">
+				class="container mx-auto px-4 flex flex-col items-center justify-between py-24 space-y-12 md:space-y-0 md:flex-row">
 				<h2 class="text-white font-bold text-4xl leading-tight text-center md:text-left md:text-5xl md:max-w-xl">
 					Simplify how your
 					team works
@@ -184,9 +184,9 @@
 		<footer class="bg-veryDarkBlue py-12">
 			<div class="container mx-auto px-4 md:px-2">
 				<div class="flex flex-col-reverse justify-between md:flex-row md:space-x-12">
-					<div class="flex flex-col-reverse justify-between space-y-5 items-center md:flex-col md:w-1/5">
+					<div class="flex flex-col-reverse justify-between items-center md:flex-col md:w-1/5">
 						<p class="text-center text-darkGrayishBlue my-6 md:hidden md:my-0">Copyright 2020. All Rights Reserved</p>
-						<img src="images/logo_white.svg" alt="logo" class="w-48 my-6 md:w-64 md:my-0">
+						<img src="images/logo_white.svg" alt="logo" class="block w-48 mt-12 md:w-64 md:mt-0">
 						<div class="flex space-x-6 md:space-x-4">
 							<img src="images/icon-facebook.svg" alt="facebook icon" class="w-8">
 							<img src="images/icon-youtube.svg" alt="youtube icon" class="w-8">
